# tfg_nivometro

./: CMakeLists.txt  README.md
components/communication/: CMakeLists.txt  communication.c
components/communication/include/: communication.h  communication_secrets.h.example
components/config/: CMakeLists.txt  config.c
components/config/include/: config.h
components/diagnostics/: CMakeLists.txt  diagnostics.c
components/diagnostics/include/: diagnostics.h
components/hcsr04p/: CMakeLists.txt  hcsr04p.c
components/hcsr04p/include/: hcsr04p.h
components/hx711/: CMakeLists.txt  hx711.c
components/hx711/include/: hx711.h
components/nivometro_sensors/: CMakeLists.txt  nivometro_sensor.h  nivometro_sensors.c
components/power_manager/: CMakeLists.txt  power_manager.c
components/power_manager/include/: power_manager.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/: storage.h
components/tasks/: CMakeLists.txt  tasks.c
components/tasks/include/: tasks.h
components/utils/: CMakeLists.txt  utils.c
components/utils/include/: utils.h
components/vl53l0x/: CMakeLists.txt  vl53l0x.c
components/vl53l0x/include/: vl53l0x.h
main/: CMakeLists.txt  main.c
tfg_telegraf_influx_grafana/: docker-compose.yaml
tfg_telegraf_influx_grafana/grafana/dashboards/: nivometro_antartica.json
tfg_telegraf_influx_grafana/telegraf/: telegraf.conf
